--- a/Rust Interpreter/Cargo.toml
+++ b/Rust Interpreter/Cargo.toml
@@ -25,6 +25,9 @@ quickscope = "0.2.0"
 rangemap = "1.5.1"
 itertools = "0.13.0"
 bitflags = "2.6.0"
+genawaiter = "0.99.1"
+async-trait = "0.1.87"
+streaming-iterator = "0.1.9"
 
 [dev-dependencies]
 ntest = "0.9.3"
